<resources>
    <string name="app_name">Absen SPN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="login_desc">Login to your account</string>
    <string name="presensi_label">Presensi</string>
    <string name="jadwal_label">Jadwal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rekap_label">Rekap</string>
    <string name="profile_label">Profile</string>
    <string name="live_attendance_label">Live Attendance</string>
    <string name="select_class">Pilih Kelas</string>
    <string name="btn_clockin">Clock In</string>
    <string name="btn_clockout">Clock Out</string>
    <string name="select_mapel">Pilih Mata Pelajaran</string>
    <string name="jadwal_title">Jadwal Pelajaran</string>
    <string name="profile_title">Profile</string>
    <string name="kelas_label">Kelas</string>
    <string name="tahun_masuk_label">Tahun Masuk</string>
    <string name="wali_kelas_label">Wali Kelas</string>
    <string name="tgl_lahir_label">Tanggal Lahir</string>
    <string name="tempat_lahir_label">Tempat Lahir</string>
    <string name="nomor_label">Nomor Handphone</string>
    <string name="data_pribadi_title">Data Pribadi</string>
    <string name="rekap_title">Rekap</string>
    <string name="no_data">Belum ada data.</string>
    <string name="absen_in_done">Berhasil Clock In</string>
    <string name="ok_label">Ok</string>
    <string name="riwayat_title">Riwayat Absensi</string>
    <string name="jabatan_label">Jabatan</string>
    <string name="pangkat_label">Pangkat</string>
    <string-array name="kelas_list">
        <item>Kelas Java</item>
        <item>Kelas Kotlin</item>
        <item>Kelas Python</item>
        <item>Kelas CPP</item>
    </string-array>
    <string-array name="mapel_list">
        <item>Mapel Pmerograman Dasar</item>
        <item>Mapel OOP</item>
        <item>Mapel Machine Learning</item>
        <item>Mapel Data Scientist</item>
        <item>Mapel Pmerograman Dasar II</item>
        <item>Mapel OOP II</item>
        <item>Mapel Machine Learning II</item>
        <item>Mapel Data Scientist II</item>
    </string-array>
</resources>