<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="14dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/input_container"
            >
            <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/logo_clear"
                android:scaleType="fitCenter"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:fontFamily="@font/poppins_medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_desc"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_card_bg"
            android:paddingHorizontal="18dp"
            android:paddingTop="18dp"
            android:paddingBottom="23dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="14sp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/labelColor"
                    android:text="@string/username"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/inputBg"
                    app:boxStrokeWidth="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="14sp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/labelColor"
                    android:text="@string/password"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/inputBg"
                    app:boxStrokeWidth="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Login"
                android:background="@drawable/roundedfull_bg"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>