<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/home_bg"
    tools:context=".fragment.PresensiFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="14dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="24dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_pic"
                android:layout_width="54dp"
                android:layout_height="54dp"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:srcCompat="@drawable/elon"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/profile_pic"
                android:layout_marginHorizontal="14dp"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="Nama Saya Elon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="10sp"
                    android:textColor="@color/white_variant"
                    android:text="123456789"/>
            </LinearLayout>
            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logout"/>
        </RelativeLayout>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="24dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/live_attendance_label" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="24sp"
                    android:textColor="@color/primary"
                    android:text="09.00"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Senin, 18 April 2024"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12sp"
                    android:textColor="@color/desc_label"/>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="2dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp">
                    <AutoCompleteTextView
                        android:id="@+id/kelasListView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:inputType="none"
                        android:text="@string/select_class"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:dropDownHeight="200dp"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="2dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp">
                    <AutoCompleteTextView
                        android:id="@+id/mapelListView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:inputType="none"
                        android:text="@string/select_mapel"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:dropDownHeight="200dp"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:orientation="horizontal">
                    <Button
                        style="@style/Widget.Material3.Button.IconButton.Filled"
                        android:id="@+id/btn_clock_in"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:text="@string/btn_clockin"
                        android:background="@drawable/roundedfull_bg"
                        />
                    <Button
                        style="@style/Widget.Material3.Button.IconButton.Filled"
                        android:id="@+id/btn_clock_out"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:text="@string/btn_clockout"
                        android:background="@drawable/roundedfull_bg"
                        />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</FrameLayout>