<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfileFragment">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:background="@color/primary"
                app:titleTextColor="@color/white"
                app:titleCentered="true"
                app:titleTextAppearance="@style/appBarTitleStyle"
                app:title="@string/profile_title"/>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="24dp"
                        android:gravity="center"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:id="@+id/profile_pic_container"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/profile_pic"
                                android:layout_width="54dp"
                                android:layout_height="54dp"
                                android:layout_centerInParent="true"
                                android:background="@color/desc_label"
                                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"/>
                            <FrameLayout
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:background="@drawable/circle_shape"
                                android:layout_toRightOf="@id/profile_pic"
                                android:layout_marginRight="10dp"
                                android:layout_alignParentBottom="true">
                                <ImageView
                                    android:layout_gravity="center"
                                    android:layout_width="14dp"
                                    android:layout_height="14dp"
                                    android:src="@drawable/ic_edit"/>
                            </FrameLayout>
                        </RelativeLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:gravity="center"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/tvName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:textSize="14sp"
                                android:textColor="@color/black"
                                android:text="Elon Musk Lvl Dewa"/>
                            <TextView
                                android:id="@+id/tvNIM"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_regular"
                                android:paddingVertical="2dp"
                                android:textSize="12sp"
                                android:textColor="@color/desc_label"
                                android:text="123456789"/>
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="14dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_pribadi_title"
                            android:fontFamily="@font/poppins_medium"
                            android:textStyle="bold"
                            android:textSize="14sp"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="8dp"
                            android:orientation="vertical">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="4dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_regular"
                                    android:textSize="12sp"
                                    android:textColor="@color/desc_label"
                                    android:text="@string/jabatan_label"
                                    android:layout_centerVertical="true"/>
                                <TextView
                                    android:id="@+id/tvJabatan"
                                    android:layout_alignParentEnd="true"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_regular"
                                    android:textSize="12sp"
                                    android:textStyle="bold"
                                    android:textColor="@color/black"
                                    android:layout_centerVertical="true"
                                    android:text="Value Kelas"/>
                            </RelativeLayout>
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="4dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_regular"
                                    android:textSize="12sp"
                                    android:textColor="@color/desc_label"
                                    android:text="@string/pangkat_label"
                                    android:layout_centerVertical="true"/>
                                <TextView
                                    android:id="@+id/tvPangkat"
                                    android:layout_alignParentEnd="true"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_regular"
                                    android:textSize="12sp"
                                    android:textStyle="bold"
                                    android:textColor="@color/black"
                                    android:layout_centerVertical="true"
                                    android:text="Value Tahun Masuk"/>
                            </RelativeLayout>
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>